@@ -341,6 +341,11 @@ keep focus on task after refresh.
 added support of tasks with deleted status.
 </p>
 </li>
+<li>
+<p>
+added urgency column.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -486,7 +491,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-03 08:57:52 CET
+Last updated 2013-12-04 09:14:08 CET
 </div>
 </div>
 </body>
