@@ -8,6 +8,7 @@ v0.0.5
  * keep focus on project after refresh.
  * keep focus on task after refresh.
  * added support of tasks with deleted status.
+ * added urgency column.
 
 v0.0.4
 ------
